# fp-sns-datalog2

./: CONTRIBUTING.md  LICENSE.md  README.md  Release_Notes.html
.github/: PULL_REQUEST_TEMPLATE.md
Documentation/html/: _a_bus_i_f_8c.html  _a_bus_i_f_8c_source.html  _a_bus_i_f_8h.html  _a_bus_i_f_8h.js  _a_bus_i_f_8h_source.html  _a_d_p_u2_8c_source.html  _a_d_p_u2_8h.html  (+6329 more)
Projects/: Release_Notes.html
Utilities/: README.md  readme.html  readme.txt
Utilities/cli_example/: CMakeLists.txt  README.md  README_Linux.md  README_RaspberryPi.md  Release_Notes.html  USB_DataLog_Run.bat  USB_DataLog_Run.sh  main.cpp  main.h  readme.html  readme_linux.html  readme_raspberryPi.html
Utilities/cli_example/bin_linux/: cli_example
Utilities/cli_example/bin_macos/arm64/: cli_example  libhs_datalog_v2.dylib
Utilities/cli_example/bin_macos/x86_64/: cli_example  libhs_datalog_v2.dylib
Utilities/cli_example/bin_raspberryPi/: cli_example
Utilities/cli_example/bin_raspberryPi4_64bit/: cli_example
Utilities/cli_example/bin_raspberryPi_32bit/: cli_example
Utilities/cli_example/bin_raspberryPi_64bit/: cli_example
Utilities/cli_example/lib/libhs_datalog/: HS_DataLog.h
Utilities/cli_example/lib/libhs_datalog/macos/arm64/: HS_DataLog.h
Utilities/cli_example/lib/logger/: log.h
Utilities/cli_example/linux_setup/: 30-hsdatalog.rules  setup.sh  udev_removal.sh
Utilities/cli_example/raspberryPi_32bit_setup/: setup.sh
Utilities/cli_example/raspberryPi_64bit_setup/: setup.sh
Utilities/cli_example/raspberryPi_setup/: setup.sh  setup_rpi3b.sh  udev_removal_rpi3b.sh
(+6579 files in other folders)
